[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://Assets/images/card.png" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fonts/Jersey M54.ttf"

[sub_resource type="DynamicFont" id=2]
size = 33
outline_size = 3
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="Template" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
centered = false

[node name="Label_top" type="Label" parent="."]
margin_left = 28.0
margin_right = 58.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 207, 86 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.639216, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1

[node name="Label_right" type="Label" parent="."]
margin_left = 51.0
margin_top = 26.0
margin_right = 81.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 207, 86 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.639216, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "2"
align = 1

[node name="Label_bottom" type="Label" parent="."]
margin_left = 26.0
margin_top = 57.0
margin_right = 56.0
margin_bottom = 94.0
rect_pivot_offset = Vector2( 207, 86 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.639216, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1

[node name="Label_left" type="Label" parent="."]
margin_left = 3.0
margin_top = 26.0
margin_right = 33.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 207, 86 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.639216, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "4"
align = 1

[node name="Label_top2" type="Label" parent="."]
visible = false
margin_left = 45.0
margin_top = 5.0
margin_right = 75.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 207, 86 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.639216, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1

[node name="Label_right2" type="Label" parent="."]
visible = false
margin_left = 84.0
margin_top = 56.0
margin_right = 114.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 207, 86 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.639216, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "2"
align = 1

[node name="Label_bottom2" type="Label" parent="."]
visible = false
margin_left = 45.0
margin_top = 112.0
margin_right = 75.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 207, 86 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.639216, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1

[node name="Label_left2" type="Label" parent="."]
visible = false
margin_left = 6.0
margin_top = 56.0
margin_right = 36.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 207, 86 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.639216, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "4"
align = 1
